2005-03-15  Matthias Wimmer  <m@tthias.net>

    * jabberd/base/base_unsubscribe.c: new base handler

2005-03-13  Matthias Wimmer  <m@tthias.net>

    * jabber.xml.dist.in: removed mod_filter from the default configuration
    * jabberd/config.c: remove 'included' configuration, we did not use it
    * jabberd/jabberd.c: same
    * jabberd/single.h: same (file removed)
    * xdb_sql/xdb_sql.c: fix for constructing queries for non-existant values

2005-03-11  Matthias Wimmer  <m@tthias.net>

    * jsm/modules/mod_auth_plain.c: log new account registrations

2005-03-10  Matthias Wimmer  <m@tthias.net>

    * jabberd/base/base_accept.c: we can now generate longer error messages
    * dialback/dialback_out.c: improved error messages

2005-03-09  Matthias Wimmer  <m@tthias.net>

    * jabberd/mio.c: send mio signal only if no signal already pending
    * xdb_sql/xdb_sql.c: fixed problem when compiling on old compilers

2005-03-05  Matthias Wimmer  <m@tthias.net>

    * jabber.xml.dist.in: added example for a write-only admin
    * jsm/jsm.c: disabled jsm_shutdown() as it crashes on existing sessions
    * jsm/modules/mod_announce.c: added write-only admins
    * jsm/modules/mod_register.c: same
    * jsm/util.c: same

2005-03-04  Matthias Wimmer  <m@tthias.net>

    * jabberd/jabberd.h: better dialback error logging
    * jabberd/mio.c: same
    * jabberd/lib/xstream.c: same
    * jabberd/lib/jabberdlib.h: same
    * jabberd/deliver.c: same
    * dialback/dialback_out.c: same
    * jabberd/jabberd.c: temp. removed a call that causes shutdown crashes

2005-03-03  Matthias Wimmer  <m@tthias.net>

    * dialback/dialback_in.c: improved stream error logging
    * dialback/dialback_out.c: same
    * jabberd/lib/jabberdlib.h: same
    * jabberd/lib/xstream.c: same
    * xdb_file/xdb_file.c: Don't log all those "file not found" warnings

2005-03-02  Matthias Wimmer  <m@tthias.net>

    * dialback/dialback_in.c: recognize stream errors and log as such